--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "labclockinadmin",
+  "name": "lab-clock-in-admin",
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
@@ -7,6 +7,7 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@cloudbase/js-sdk": "^1.7.1",
     "react": "^17.0.0",
     "react-dom": "^17.0.0"
   },
