--- a/package.json
+++ b/package.json
@@ -8,13 +8,18 @@
   },
   "dependencies": {
     "@cloudbase/js-sdk": "^1.7.1",
+    "antd": "^4.16.13",
     "react": "^17.0.0",
-    "react-dom": "^17.0.0"
+    "react-dom": "^17.0.0",
+    "react-query": "^3.32.3",
+    "react-router": "^6.0.2"
   },
   "devDependencies": {
+    "@types/node": "^16.11.7",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@vitejs/plugin-react": "^1.0.0",
+    "sass": "^1.43.4",
     "typescript": "^4.3.2",
     "vite": "^2.6.4"
   }
