--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@amap/amap-react": "^0.1.3",
     "@cloudbase/js-sdk": "^1.7.1",
     "antd": "^4.16.13",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-query": "^3.32.3",
-    "react-router": "^6.0.2"
+    "react-router-dom": "^6.0.2"
   },
   "devDependencies": {
     "@types/node": "^16.11.7",
