--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@amap/amap-react": "^0.1.3",
     "@cloudbase/js-sdk": "^1.7.1",
+    "@uiw/react-amap": "^2.4.0",
     "antd": "^4.17.2",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
@@ -20,7 +21,10 @@
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.0",
     "@vitejs/plugin-react": "^1.1.0",
+    "autoprefixer": "^10.4.0",
+    "postcss": "^8.4.4",
     "sass": "^1.44.0",
+    "tailwindcss": "^2.2.19",
     "typescript": "^4.5.2",
     "vite": "^2.6.4"
   }
