--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "serve": "vite preview"
   },
   "dependencies": {
-    "@amap/amap-react": "^0.1.3",
     "@cloudbase/js-sdk": "^1.7.1",
+    "@pansy/react-amap": "^2.12.2",
     "antd": "^4.17.2",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
