--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,7 @@
     "jsx": "react-jsx",
     "baseUrl": ".",
     "paths": {
+      "~/*": ["src/*"],
       "src/*": ["src/*"],
       "assets/*": ["src/assets/*"],
       "components/*": ["src/components/*"],
