--- a/package.json
+++ b/package.json
@@ -7,24 +7,23 @@
     "serve": "vite preview"
   },
   "dependencies": {
-    "@cloudbase/js-sdk": "1.7.1",
-    "@pansy/react-amap": "2.12.3",
-    "antd": "4.18.2",
+    "@cloudbase/js-sdk": "^1.7.2",
+    "@pansy/react-amap": "^2.12.4",
+    "antd": "^4.20.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-query": "3.34.0",
-    "react-router-dom": "6.0.2"
+    "react-query": "^3.39.0",
+    "react-router-dom": "^6.3.0"
   },
   "devDependencies": {
-    "@types/node": "16.11.19",
+    "@types/node": "^17.0.32",
     "@types/react": "17.0.37",
     "@types/react-dom": "17.0.11",
-    "@vitejs/plugin-react": "1.1.4",
-    "autoprefixer": "10.4.0",
-    "postcss": "8.4.4",
-    "sass": "1.44.0",
-    "tailwindcss": "2.2.19",
-    "typescript": "4.5.4",
-    "vite": "2.7.10"
+    "@vitejs/plugin-react": "^1.3.2",
+    "typescript": "^4.6.4",
+    "vite": "^2.9.8",
+    "vite-plugin-windicss": "^1.8.4",
+    "vitest": "^0.12.4",
+    "windicss": "^3.5.2"
   }
 }
