--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@cloudbase/js-sdk": "^1.7.2",
     "@pansy/react-amap": "^2.12.4",
     "antd": "^4.20.3",
+    "echarts-for-react": "^3.0.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-query": "^3.39.0",
