--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "serve": "vite preview"
+    "serve": "vite preview",
+    "test": "vitest run",
+    "coverage": "vitest run --coverage"
   },
   "dependencies": {
     "@cloudbase/js-sdk": "^1.7.2",
@@ -17,14 +19,20 @@
     "react-router-dom": "^6.3.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^12.1.5",
+    "@testing-library/react-hooks": "^7.0.2",
+    "@testing-library/user-event": "^14.2.0",
     "@types/node": "^17.0.32",
     "@types/react": "17.0.37",
     "@types/react-dom": "17.0.11",
     "@vitejs/plugin-react": "^1.3.2",
+    "c8": "^7.11.3",
+    "happy-dom": "^4.0.1",
     "typescript": "^4.6.4",
     "vite": "^2.9.8",
     "vite-plugin-windicss": "^1.8.4",
-    "vitest": "^0.12.4",
+    "vitest": "^0.12.7",
     "windicss": "^3.5.2"
   }
 }
